--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,10 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# Scripts and utility files
+scripts/
+fetch_*.py
+*_check.py
+*_status.py
+*_fix.py
